# orthanc-rs

./: .dockerignore  .gitignore  Cargo.toml  Orthanc.jsonc  README.md  docker-compose.yml  flake.nix  generate_orthanc_bindings.sh  justfile  openapi-generator.yaml  upload2orthanc.sh
.github/workflows/: test.yml
blt/: Cargo.toml  Containerfile  README.md  docker-compose.yml  flake.nix  justfile  openapi.yaml  podman-compose.yml
blt/data/: manifest_aws.s5cmd  manifest_gcs.s5cmd
blt/orthanc/: dev.jsonc  pacs.jsonc
blt/orthanc_config/dev/: Orthanc.json  ReceivedInstanceFilter.lua
blt/orthanc_config/pacs/: Orthanc.json
blt/orthanc_config/peer/: Orthanc.json
blt/scripts/: assignAccessionNumbers.ts  createCsv.ts  modifyOrthancOpenAPI.ts  reportJobStatuses.ts
blt/src/: blt.rs  lib.rs  plugin.rs
blt/src/blt/: api.rs  database.rs  error.rs  filter.rs  get_accession_number.rs  models.rs  on_change.rs  on_study_received.rs  push.rs  series_of_study.rs
example_plugin/: .gitignore  Cargo.toml  Orthanc.jsonc  README.md  justfile  podman-compose.yml  test.sh
example_plugin/src/: plugin.rs
examples/: .gitignore  Orthanc.json  justfile
examples/basic/: Cargo.toml
examples/basic/src/: plugin.rs
examples/tests/: example.test.ts  webapp.test.ts
examples/webapp/: Cargo.toml  README.md
examples/webapp/src/: plugin.rs
include_webdir/: Cargo.toml
include_webdir/src/: lib.rs
include_webdir/tests/: integration_test.rs
include_webdir_macros/: Cargo.toml
include_webdir_macros/src/: copy_of_include_dir_macros.rs  lib.rs
orthanc/: dev.jsonc  pacs.jsonc
orthanc_api/: Cargo.toml  README.md
orthanc_api/src/: dicom.rs  job.rs  lib.rs  types.rs
orthanc_client_ogen_overlay/: Cargo.toml  README.md
orthanc_client_ogen_overlay/src/: lib.rs
orthanc_sdk/: Cargo.toml  README.md  build.rs  justfile
orthanc_sdk/.helix/: languages.toml
orthanc_sdk/example_directory/: README
orthanc_sdk/src/: .gitignore  api.rs  bindings.rs  callback.rs  config.rs  error_code.rs  helpers.rs  http.rs  lib.rs  on_change.rs  rest.rs  sdk.rs  tracing_subscriber.rs  utils.rs  webapp.rs
orthanc_sdk/src/api/: answers.rs  client.rs  dicom.rs  find.rs  general.rs  jobs.rs  mod.rs  modalities.rs  peers.rs  query.rs  response.rs  types.rs
orthanc_sdk/src/api/types/: dicom.rs  id.rs  job.rs
src/: blt.rs  dicom_date.rs  lib.rs  orthanc.rs  plugin.rs
src/blt/: api.rs  database.rs  models.rs  on_change.rs  series_of_study.rs
src/orthanc/: .gitignore  api.rs  callback.rs  helpers.rs  http.rs  on_change.rs
src/orthanc/api/: answers.rs  client.rs  find.rs  job.rs  jobs.rs  modalities.rs  query.rs  response.rs  types.rs
