[package]
name = "neochris_orthanc_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
http = "1.3.1"
kstring = { version = "2.0.2", features = ["serde"] }
nutype = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = { version = "0.25.0", default-features = false }
