[workspace]

resolver = "2"

members = [
    "orthanc_api",
    "orthanc_sdk",
    "orthanc_client_ogen",
    "blt",
    "examples/basic",
    "examples/webapp",
    "include_webdir_macros",
    "include_webdir"
]

[workspace.package]
edition = "2024"
repository = "https://github.com/FNNDSC/orthanc-rs"
