[package]
name = "blt"
version = "0.1.0"
edition = "2024"

[dependencies]
orthanc_sdk = { path = "../orthanc_sdk" }
bimap = "0.6.3"
http = "1.3.1"
nutype = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
compact_str = { version = "0.9.0", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
