[package]
name = "include_webdir"
description = "Embed a static web application bundle in your binary"
version = "0.1.0"
license = "MIT"
edition.workspace = true
repository.workspace = true
keywords = ["assets", "dir", "include", "http"]
categories = ["web-programming::http-server"]

[dependencies]
include_webdir_macros = { version = "0.1.0", path = "../include_webdir_macros" }
litemap = "0.8.0"

[dev-dependencies]
httpdate = "1.0.3"
include_dir = { version = "0.7.4", features = ["metadata"] }
