[package]
name = "orthanc_api"
version = "0.1.0"
edition = "2024"

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
nutype = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "1.4.1"
