[package]
name = "orthanc_api"
description = "Orthanc API hand-written response models"
repository = "https://github.com/FNNDSC/orthanc-rs"
version = "0.0.2"
edition = "2024"
license = "GPL-3.0"
keywords = ["orthanc", "api", "client", "rest"]
categories = ["science::neuroscience", "science", "web-programming::http-client", "api-bindings"]

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
nutype = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"

[dev-dependencies]
pretty_assertions = "1"
