[package]
name = "orthanc_api"
description = "Orthanc API hand-written response models"
version = "0.0.2"
license = "GPL-3.0"
edition.workspace = true
repository.workspace = true
keywords = ["orthanc", "api", "client", "rest"]
categories = ["science::neuroscience", "science", "web-programming::http-client", "api-bindings"]

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
nutype = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"

[dev-dependencies]
pretty_assertions = "1"
