[package]
name = "orthanc_client_ogen"
description = "Orthanc API client library produced by OpenAPI Generator"
version = "1.12.8"
license = "GPL-3.0"
edition.workspace = true
repository.workspace = true
keywords = ["orthanc", "api", "client", "rest", "openapi"]
categories = ["science::neuroscience", "science", "web-programming::http-client", "api-bindings"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json"], optional = true }
reqwest-middleware = { version = "0.4.2", features = ["json"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest", "dep:reqwest-middleware"]
