[package]
name = "orthanc_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
orthanc_api = { path = "../orthanc_api" }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
compact_str = { version = "0.9.0", features = ["serde"] }
