[package]
name = "example_plugin_basic"
description = "Example Orthanc plugin in Rust"
version = "0.1.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
http = "1.3.1"
orthanc_sdk = { path = "../../orthanc_sdk" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"

[lib]
crate-type = ["cdylib"]
