[package]
name = "example_plugin_webapp"
description = "Test case for orthanc_sdk::webapp"
version = "0.0.0"
edition = "2024"

[dependencies]
include_dir = "0.7.4"
include_webdir = { path = "../../include_webdir" }
orthanc_sdk = { path = "../../orthanc_sdk", features = ["webapp"] }

[lib]
crate-type = ["cdylib"]
